--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,17 @@
-<ul>
+<!-- <ul>
 <li *ngFor="let country of countries">
     {{country.name}} - {{country.population | number}}
 </li>
 
-</ul>
+</ul> -->
+<div  class="card-columns">
+    <div class="card" *ngFor="let song of newSongs">
+        <img [src]="song.images[0].url" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{song.name}}</h5>
+            <p class="card-text">
+                <span *ngFor="let artist of song.artists" class="badge badge-pill badge-primary">{{artist.name}}</span>
+            </p>
+        </div>
+    </div>
+</div>
