search/home/cards component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<div class="container m-5">
+<div class="container m-7 mt-5 col-10">
   <router-outlet></router-outlet>
 </div>
