--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,2 @@
-<!-- <ul>
-<li *ngFor="let country of countries">
-    {{country.name}} - {{country.population | number}}
-</li>
-
-</ul> -->
-<div  class="card-columns">
-    <div class="card" *ngFor="let song of newSongs">
-        <img [src]="song.images[0].url" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{song.name}}</h5>
-            <p class="card-text">
-                <span *ngFor="let artist of song.artists" class="badge badge-pill badge-primary">{{artist.name}}</span>
-            </p>
-        </div>
-    </div>
-</div>
+<app-loading></app-loading>
+<app-cards [items]="newSongs"></app-cards>
