--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,16 +1,11 @@
-<div class="row">
+<div class="row mb-5">
     <div class="col">
-        <input #term type="text" (keyup)="search(term.value)" class="form-control" placeholder="Search artist...">
+        <input #term
+               type="text"
+               (keyup)="search(term.value)"
+               class="form-control"
+               placeholder="Search artist...">
     </div>
 </div>
 
-<div  class="card-columns m-5">
-    <div class="card" *ngFor="let artist of artists">
-        <img [src]="artist.images[0].url" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{artist.name}}</h5>
-            <p class="card-text">
-            </p>
-        </div>
-    </div>
-</div>
+<app-cards [items]="artists"></app-cards>
